# entsoe-day-ahead-price

./: .gitignore  Cargo.toml  README.md  example_response.xml
src/: lib.rs
