[package]
name = "entsoe-day-ahead-price"
version = "0.1.0"
edition = "2021"
authors = ["Peter Allwin <peter@allwin.se>"]
repository = "https://github.com/peterall/entsoe-day-ahead-price.git"
homepage = "https://github.com/peterall/entsoe-day-ahead-price.git"
license = "MIT"
readme = "README.md"
description = "A Rust library for fetching Swedish day-ahead electricity spot prices from ENTSO-E Transparency"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
rusty-money = { version = "0.4.0", features = ["iso"] }
thiserror = "1.0"
serde-xml-rs = "0.6.0"